deploy/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xiaoan
spec:
  ingressClassName: higress
  tls:
    - hosts: [REPLACE_APP_DOMAIN]
      secretName: xiaoan-tls
  rules:
    - host: REPLACE_APP_DOMAIN
      http:
        paths:
          - path: /xiaoan-platform
            pathType: Prefix
            backend:
              service:
                name: xiaoan-web
                port:
                  number: 80
